--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -132,8 +132,11 @@
     <ClCompile Include="Scene\Light.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Math\SortImpl.hpp">
-      <Filter>Math</Filter>
+    <ClCompile Include="Renderer\MultiPipeline.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer\ShaderMacroDefinitions.cpp">
+      <Filter>Renderer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -256,6 +259,13 @@
     </ClInclude>
     <ClInclude Include="Math\Sort.hpp">
       <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\SortImpl.hpp" />
+    <ClInclude Include="Renderer\MultiPipeline.hpp">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\ShaderMacroDefinitions.hpp">
+      <Filter>Renderer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
