--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -260,12 +260,14 @@
     <ClInclude Include="Math\Sort.hpp">
       <Filter>Math</Filter>
     </ClInclude>
-    <ClInclude Include="Math\SortImpl.hpp" />
     <ClInclude Include="Renderer\MultiPipeline.hpp">
       <Filter>Renderer</Filter>
     </ClInclude>
     <ClInclude Include="Renderer\ShaderMacroDefinitions.hpp">
       <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\SortImpl.hpp">
+      <Filter>Math</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
