[Lnx] Add prepare_deps.sh and support glslang

--- a/ABench/CMakeLists.txt
+++ b/ABench/CMakeLists.txt
@@ -21,10 +21,14 @@ PKG_CHECK_MODULES(ABENCH_PKG_DEPS REQUIRED
 
 INCLUDE_DIRECTORIES(${ABENCH_ROOT_DIRECTORY} ${ABENCH_DIRECTORY}
                     ${ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY}
+                    ${ABENCH_DEPS_GLSLANG_INCLUDE_DIRECTORY}
                     ${ABENCH_DEPS_VULKAN_DIRECTORY}
                     ${ABENCH_PKG_DEPS_INCLUDE_DIRS}
-                   )
-LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY} ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY})
+                    )
+LINK_DIRECTORIES(${ABENCH_LIB_DIRECTORY}
+                 ${ABENCH_DEPS_FBXSDK_LIB_DIRECTORY}
+                 ${ABENCH_DEPS_GLSLANG_LIB_DIRECTORY}
+                 )
 
 # To enable XCB-specific Vulkan extensions
 ADD_DEFINITIONS(-DVK_USE_PLATFORM_XCB_KHR -DVK_NO_PROTOTYPES)
@@ -38,9 +42,7 @@ ADD_EXECUTABLE(ABench
                ${ABENCH_COMMON_LINUX_SOURCES} ${ABENCH_COMMON_LINUX_HEADERS}
                ${ABENCH_RENDERER_LINUX_SOURCES} ${ABENCH_RENDERER_LINUX_HEADERS})
 
-# TODO uncomment when glslang will be added
-#TARGET_LINK_LIBRARIES(ABench glslang hlsl SPIRV OGLCompiler OSDependent)
-TARGET_LINK_LIBRARIES(ABench dl fbxsdk freeimage
+TARGET_LINK_LIBRARIES(ABench dl fbxsdk freeimage glslang SPIRV OGLCompiler OSDependent
                       ${ABENCH_PKG_DEPS_LIBRARIES})
 
 ADD_CUSTOM_COMMAND(TARGET ABench POST_BUILD COMMAND
