--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,10 @@ SET(ABENCH_DEPS_FBXSDK_INCLUDE_DIRECTORY ${ABENCH_DEPS_FBXSDK_DIRECTORY}/include
 STRING(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWER)
 SET(ABENCH_DEPS_FBXSDK_LIB_DIRECTORY ${ABENCH_DEPS_FBXSDK_DIRECTORY}/lib/gcc4/x64/${BUILD_TYPE_LOWER})
 
+SET(ABENCH_DEPS_GLSLANG_DIRECTORY ${ABENCH_DEPS_DIRECTORY}/glslang)
+SET(ABENCH_DEPS_GLSLANG_INCLUDE_DIRECTORY ${ABENCH_DEPS_GLSLANG_DIRECTORY}/include)
+SET(ABENCH_DEPS_GLSLANG_LIB_DIRECTORY ${ABENCH_DEPS_GLSLANG_DIRECTORY}/bin)
+
 
 ### Verify dependency existence ###
 
