--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ SET(ABENCH_DEPS_FBXSDK_LIB_DIRECTORY ${ABENCH_DEPS_FBXSDK_DIRECTORY}/lib/gcc4/x6
 
 SET(ABENCH_DEPS_GLSLANG_DIRECTORY ${ABENCH_DEPS_DIRECTORY}/glslang)
 SET(ABENCH_DEPS_GLSLANG_INCLUDE_DIRECTORY ${ABENCH_DEPS_GLSLANG_DIRECTORY}/include)
-SET(ABENCH_DEPS_GLSLANG_LIB_DIRECTORY ${ABENCH_DEPS_GLSLANG_DIRECTORY}/bin)
+SET(ABENCH_DEPS_GLSLANG_LIB_DIRECTORY ${ABENCH_DEPS_GLSLANG_DIRECTORY}/lib)
 
 
 ### Verify dependency existence ###
