--- a/ABenchTest/ABenchTest.vcxproj
+++ b/ABenchTest/ABenchTest.vcxproj
@@ -28,27 +28,27 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClCompile Include="..\ABench\Common\FBXFile.cpp" />
     <ClCompile Include="..\ABench\Common\Win\Common.cpp" />
+    <ClCompile Include="..\ABench\Common\Win\FS.cpp" />
     <ClCompile Include="..\ABench\Common\Win\Logger.cpp" />
     <ClCompile Include="..\ABench\Common\Win\Timer.cpp" />
     <ClCompile Include="..\ABench\Math\Vector.cpp" />
@@ -180,7 +181,8 @@
     </ClCompile>
     <ClCompile Include="Tests\FBXFileTest.cpp" />
     <ClCompile Include="Tests\SortTest.cpp" />
-    <ClCompile Include="Tests\VectorTest.cpp" />
+    <ClCompile Include="Tests\Vector3Test.cpp" />
+    <ClCompile Include="Tests\Vector4Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PCH.hpp" />
