--- a/ABenchTest/ABenchTest.vcxproj.filters
+++ b/ABenchTest/ABenchTest.vcxproj.filters
@@ -2,9 +2,6 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Tests\VectorTest.cpp">
-      <Filter>Tests</Filter>
-    </ClCompile>
     <ClCompile Include="..\ABench\Math\Vector.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
@@ -25,6 +22,15 @@
       <Filter>Tests</Filter>
     </ClCompile>
     <ClCompile Include="..\ABench\Common\Win\Timer.cpp">
+      <Filter>Modules\Win</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\Vector4Test.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests\Vector3Test.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ABench\Common\Win\FS.cpp">
       <Filter>Modules\Win</Filter>
     </ClCompile>
   </ItemGroup>
